tests/should_fail/wrong_fn_arg_count.nv
module wrong_fn_arg_count
// SHOULD FAIL: calling function with wrong number of arguments
fn add(a: Int, b: Int) -> Int {
    return a + b
}
let result = add(1, 2, 3)
